--- a/.gitmodules
+++ b/.gitmodules
@@ -21,3 +21,6 @@
 [submodule "externals/magic_get"]
 	path = externals/magic_get
 	url = https://github.com/EOSIO/magic_get
+[submodule "externals/libra"]
+	path = externals/libra
+	url = https://github.com/learnforpractice/libra
