Modify libra submodule url

--- a/.gitmodules
+++ b/.gitmodules
@@ -23,4 +23,5 @@
 	url = https://github.com/EOSIO/magic_get
 [submodule "externals/libra"]
 	path = externals/libra
-	url = https://github.com/learnforpractice/libra
+	url = https://github.com/uuosio/libra
+	branch = libra4eos
